--- a/views/template.ejs
+++ b/views/template.ejs
@@ -5,16 +5,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <!-- ----------------------------  bootstrap files  --------------------------- -->
+    <script src="/jquery.min.js"></script> <!-- add this befor bootstrap -- IMPORTANT -->
+    <link rel="stylesheet" href="/bootstrap-4.1.1/css/bootstrap.min.css">
+    <script src="/bootstrap-4.1.1/js/bootstrap.min.js"></script>
+
     <title>
         <%= page_title %>
     </title>
+
+    <style>
+        body {
+            width: 100%;
+            background-color: #ddd6c9;
+            font-family: "Verdana";
+            margin-top: 70px;
+        }
+    </style>
 </head>
 
 
-<body style="width: 100%;">
 
-    <% include partials/header %>
+<body>
+
+    <!-- <%// include partials/header %> -->
     <% include partials/navbar %>
+
+
 
     <%-  include(render_page) %>
 
