--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,23 +1,17 @@
 <style>
-    @media (min-width: 576px) {
+    @media (min-width: 560px) {
         .card-columns {
-            column-count: 2;
+            column-count: 1;
         }
     }
 
     @media (min-width: 768px) {
         .card-columns {
-            column-count: 3;
+            column-count: 2;
         }
     }
 
     @media (min-width: 992px) {
-        .card-columns {
-            column-count: 4;
-        }
-    }
-
-    @media (min-width: 1200px) {
         .card-columns {
             column-count: 3;
         }
@@ -37,20 +31,23 @@
 
         <div class="card" style="width: 18rem;">
             <div class="card-body">
-                <h5 class="card-title">
+                <h5 class="card-title" style="font-weight: bold; font-size: 28px">
                     <%= article.title %>
                 </h5>
-                <h6 class="card-subtitle mb-2 text-muted">
+                <h6 class="card-subtitle mb-2 text-muted" style="font-style: italic">
                     <%= article.author %>
                 </h6>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
-                <a href="<%= article._id %>" class="card-link">Card link</a>
-                <a href="#" class="card-link">Another link</a>
+                <p class="card-text">
+                    <%= article.body.substring(1,80)%> ...
+                </p>
+                <a href="article/<%= article._id %>" class="card-link yello_link">Read</a>
+                <a href="/article/edit/<%=article._id %>" class="card-link yello_link">Edit</a>
+
+                <a href="#" class="card-link delete-article red_link" data-id="<%= article._id %>" style="padding-left: 70px;">
+                    Delete</a>
+
             </div>
         </div>
-
 
         <% }); %>
 
