--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -2,12 +2,12 @@
 <nav class="navbar navbar-expand-md bg-dark fixed-top navbar-dark">
 
     <a href=""></a> <!-- JUST KEEP ITS for adjustment -->
-    <a class="navbar-brand " href="/" style="position: fixed; border: 0px solid yellow; height: 80px; width: 60px;">
-        <img src="/images/bitcoin.png" alt="Logo" style="width:90px; margin-top: 0px; border: 0px solid red; position: fixed">
+    <a class="navbar-brand " href="/" style="position: fixed;  height: 80px; width: 60px;">
+        <img src="/images/bitcoin_logo.png" alt="Logo" style="width:90px; margin-top: 0px; border: 0px solid red; position: fixed">
     </a>
 
     <!-- <a class="navbar-brand .d-md-none .d-lg-block " href="/" >
-        <img src="/images/bitcoin.png" alt="Logo" style="width:30px;">
+        <img src="/images/bitcoin_logo.png" alt="Logo" style="width:30px;">
     </a> -->
 
 
@@ -17,7 +17,7 @@
     </button>
 
     <!-- Links -->
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent" style="">
 
         <ul class="navbar-nav mr-auto">
 
