--- a/views/template.ejs
+++ b/views/template.ejs
@@ -6,23 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <!-- ----------------------------  bootstrap files  --------------------------- -->
+    <!-- ----------------------------  BOOTSTRAP files  --------------------------- -->
     <script src="/jquery.min.js"></script> <!-- add this befor bootstrap -- IMPORTANT -->
     <link rel="stylesheet" href="/bootstrap-4.1.1/css/bootstrap.min.css">
     <script src="/bootstrap-4.1.1/js/bootstrap.min.js"></script>
 
+    <!-- ----------------------------  CUSTOM CSS  --------------------------- -->
+    <link rel="stylesheet" href="/css/custom.css">
+
     <title>
         <%= page_title %>
     </title>
-
-    <style>
-        body {
-            width: 100%;
-            background-color: #ddd6c9;
-            font-family: "Verdana";
-            margin-top: 70px;
-        }
-    </style>
 </head>
 
 
@@ -32,16 +26,28 @@
     <!-- <%// include partials/header %> -->
     <% include partials/navbar %>
 
-
-
     <%-  include(render_page) %>
-
 
     <!-- <%//  if(page_title !== "Landing Page")  {  %>
     <%//   include partials/footer %>
     <%//   } %> -->
 
-
 </body>
+
+<!-- ----------------------------  CUSTOM JS  --------------------------- -->
+<script src="/js/custom.js"></script>
+
+<script>
+    $(document).ready(function () {
+        $('.delete-article').on('click', function (e) {
+            $target = $(e.target);
+
+
+            // console.log($target);
+            // const id = $target.attr('data-id');
+
+        });
+    });
+</script>
 
 </html>
