--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -38,7 +38,7 @@
         <ul class="navbar-nav ml-auto">
 
             <li class="nav-item" style=" margin-left: 90px;">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="/signup">
                     <span class="" style="border-bottom: 1px dotted #ddd6c9; padding-bottom: 7px;">
                         Sign Up
                     </span>
@@ -47,7 +47,7 @@
 
             <li class="nav-item" style=" margin-left: 90px; margin-right: 10px;">
 
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="/login">
                     <span class="" style="border-bottom: 1px dotted #ddd6c9; padding-bottom: 7px;">
                         Login
                     </span>
