added routes to application * code cleanup :P

--- a/views/pages/add_article.ejs
+++ b/views/pages/add_article.ejs
@@ -3,7 +3,7 @@
 <div class="container" style="background-color: rgb(180, 184, 184);">
 
 	<!-- Default form contact -->
-	<form class="text-center border border-light p-5" method="POST" action="/articles/add">
+	<form class="text-center border border-light p-5" method="POST" action="/article/add">
 		<h1>ADD&nbsp; ARTICLE</h1>
 
 		<br>
