--- a/views/pages/edit_article.ejs
+++ b/views/pages/edit_article.ejs
@@ -3,7 +3,7 @@
 <div class="container" style="background-color: rgb(180, 184, 184);">
 
     <!-- Default form contact -->
-    <form class="text-center border border-light p-5" method="POST" action="/articles/update">
+    <form class="text-center border border-light p-5" method="POST" action="/article/update">
         <h1>ADIT&nbsp; ARTICLE</h1>
 
         <input type="text" hidden name="article_id" value="<%=article._id%>">
