--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -26,7 +26,7 @@
             </li>
 
             <li class="nav-item" style=" margin-left: 90px;">
-                <a class="nav-link" href="/articles/add">Add Article</a>
+                <a class="nav-link" href="/article/add">Add Article</a>
             </li>
 
             <li class="nav-item" style=" margin-left: 90px;">
