code refactor * addition of user & admine model & routes

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -24,7 +24,7 @@ a.stylish_yello_link:active {
     color: white;
 }
 
-/* ------- styleis yellow link with box -------*/
+/* ------- styleis RED link with box -------*/
 a.stylish_red_link:link,
 a.stylish_red_link:visited {
     background-color: transparent;
