--- a/views/admin_pages/admin_login.ejs
+++ b/views/admin_pages/admin_login.ejs
@@ -1,8 +1,18 @@
 <style>
+    input[type="email"],
+    input[type="password"],
+    input[type="text"],
+    textarea {
+
+        background-color: #ffffff27;
+        color: white;
+    }
 
     .box {
+        /* border: 2px solid white; */
     width: 500px;
-    margin: 200px 0;
+    margin-top: 90px;
+    height: 300px;
 }
 
 .shape1{
@@ -80,7 +90,9 @@
 }
 
 .form {
+    width: 230px;
     margin-left: 145px;
+    margin-top: -25px;
 }
 </style>
 
@@ -96,8 +108,11 @@
                 <div class="shape6"></div>
                 <div class="shape7"></div>
                 <div class="float">
+                    <a href="/admins/signup" class="stylish_yello_link" style="margin-top: 0px; color: white; background-color: rgb(247, 152, 38);">signup</a>
 
-                    <form class="form" action="/admin" method="POST">
+                    <form class="form" action="/admin" method="POST" style="border: 0px solid red;">
+
+
                         <div class="form-group">
                             <label for="username" class="text-white">Username:</label><br>
                             <input type="text" name="username" id="username" class="form-control">
@@ -107,7 +122,7 @@
                             <input type="text" name="password" id="password" class="form-control">
                         </div>
                         <div class="form-group">
-                            <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
+                            <input type="submit" name="submit" class="btn btn-info btn-md" value="Login">
                         </div>
                     </form>
 
