--- a/views/article_pages/edit_article.ejs
+++ b/views/article_pages/edit_article.ejs
@@ -4,7 +4,7 @@
 
     <!-- Default form contact -->
     <form class="text-center border border-light p-5" method="POST" action="/article/update">
-        <h1>ADIT&nbsp; ARTICLE</h1>
+        <h1>EDIT&nbsp; ARTICLE</h1>
 
         <input type="text" hidden name="article_id" value="<%=article._id%>">
         <br>
