--- a/views/user_pages/user_login.ejs
+++ b/views/user_pages/user_login.ejs
@@ -120,37 +120,32 @@
     }
 </style>
 
-<head>
-    <!-- <link rel="stylesheet" href="css/normalize.css"> -->
-    <!-- <link href='https://fonts.googleapis.com/css?family=Nunito:400,300' rel='stylesheet' type='text/css'> -->
-    <!-- <link rel="stylesheet" href="css/main.css"> -->
-</head>
-
-
-
 
 <br>
-<form action="index" method="POST">
 
-    <h1>Log In</h1>
-    <fieldset>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="user_name">
+<form action="#">
+    <a href="/users/signup" class="stylish_yello_link" > signup</a>
+    <form action="index" method="POST">
+        <h1>Log In</h1>
+        <fieldset>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="user_name">
 
-        <label for="mail">Email:</label>
-        <input type="email" id="mail" name="user_email">
+            <label for="mail">Email:</label>
+            <input type="email" id="mail" name="user_email">
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="user_password">
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="user_password">
 
-        <label>Role:</label>
-        <input type="radio" id="buyer" value="buyer" name="user_role" checked>
-        <label for="under_13" class="light"> Buyer </label>
+            <label>Role:</label>
+            <input type="radio" id="buyer" value="buyer" name="user_role" checked>
+            <label for="under_13" class="light"> Buyer </label>
 
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="radio" id="dealer" value="dealer" name="user_role">
-        <label for="over_13" class="light"> Dealer </label>
-    </fieldset>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <input type="radio" id="dealer" value="dealer" name="user_role">
+            <label for="over_13" class="light"> Dealer </label>
+        </fieldset>
 
-    <button type="submit">Log In</button>
+        <button type="submit">Log In</button>
+    </form>
 </form>
