--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -5,6 +5,19 @@ body {
     margin-top: 70px;
 }
 
+/* ========================    errors for passport  ======================== */
+.alert-error {
+    color: #a94442;
+    background-color: #f2dede;
+    border-color: #ebccd1;
+}
+
+.alert-success_msg {
+    color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
+}
+
 /* ========================    links    Start  ======================== */
 /* ------- styleis yellow link with box -------*/
 a.stylish_yello_link:link,
@@ -83,4 +96,3 @@ a.red_link:active {
 }
 
 /* ========================    links    END  ======================== */
-
