--- a/views/admin_pages/admin_login.ejs
+++ b/views/admin_pages/admin_login.ejs
@@ -1,3 +1,5 @@
+<% if ( user == null ) {  %>
+
 <style>
     input[type="email"],
     input[type="password"],
@@ -131,3 +133,12 @@
         </div>
     </div>
 </div>
+
+
+<% } else {  %>
+
+<script>
+    window.location = "/";
+</script>
+
+<% }  %>
