--- a/views/admin_pages/admin_signup.ejs
+++ b/views/admin_pages/admin_signup.ejs
@@ -1,3 +1,5 @@
+<% if ( user == null ) {  %>
+
 <style>
     input[type="email"],
     input[type="password"],
@@ -287,3 +289,12 @@
         </div>
     </div>
 </div>
+
+
+<% } else {  %>
+
+<script>
+    window.location = "/";
+</script>
+
+<% }  %>
