--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,5 @@
+<% if(user) { %>
+
 <style>
     @media (min-width: 560px) {
         .card-columns {
@@ -21,11 +23,12 @@
         background-color: rgb(240, 235, 230);
     }
 </style>
+
+
 <div class="container">
 
     <h1>Articles</h1>
     <br>
-
 
     <div class="card-columns">
         <% all_articles.forEach((article) => { %>
@@ -51,7 +54,14 @@
         </div>
 
         <% }); %>
-
     </div>
 
 </div>
+
+<% } else {  %>
+
+<script>
+    window.location = "/users/login";
+</script>
+
+<% }  %>
