--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-md bg-dark fixed-top navbar-dark">
 
     <a href=""></a> <!-- JUST KEEP ITS for adjustment -->
-    <a class="navbar-brand " href="/" style="position: fixed;  height: 80px; width: 60px;">
+    <a class="navbar-brand " href="#" style="position: fixed;  height: 80px; width: 60px;">
         <img src="/images/bitcoin_logo.png" alt="Logo" style="width:90px; margin-top: 0px; border: 0px solid red; position: fixed">
     </a>
 
@@ -19,6 +19,8 @@
     <!-- Links -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent" style="">
 
+        <% if ( user !== null ) {  %>
+        <!-- ie if user is logged in  -->
         <ul class="navbar-nav mr-auto">
 
             <li class="nav-item" style=" margin-left: 90px;">
@@ -35,10 +37,15 @@
 
         </ul>
 
+        <% } %>
+
+
         <ul class="navbar-nav ml-auto">
 
+            <% if ( user == null ) {  %>
+            <!-- ie if user is NOT logged  -->
             <li class="nav-item" style=" margin-left: 90px;">
-                <a class="nav-link" href="/signup">
+                <a class="nav-link" href="/users/signup">
                     <span class="" style="border-bottom: 1px dotted #ddd6c9; padding-bottom: 7px;">
                         Sign Up
                     </span>
@@ -47,12 +54,25 @@
 
             <li class="nav-item" style=" margin-left: 90px; margin-right: 10px;">
 
-                <a class="nav-link" href="/login">
+                <a class="nav-link" href="/users/login">
                     <span class="" style="border-bottom: 1px dotted #ddd6c9; padding-bottom: 7px;">
                         Login
                     </span>
                 </a>
             </li>
+
+            <% } else { %>
+
+            <li class="nav-item" style=" margin-left: 90px; margin-right: 10px;">
+
+                <a class="nav-link" href="/users/logout">
+                    <span class="" style="border-bottom: 1px dotted #ddd6c9; padding-bottom: 7px;">
+                        Log-out
+                    </span>
+                </a>
+            </li>
+
+            <% } %>
 
         </ul>
     </div>
