--- a/views/user_pages/user_login.ejs
+++ b/views/user_pages/user_login.ejs
@@ -1,3 +1,5 @@
+<% if ( user == null ) {  %>
+
 <style>
     *,
     *:before,
@@ -122,30 +124,31 @@
 
 
 <br>
+<br>
+<form action="/users/login" method="POST">
 
-<form action="#">
-    <a href="/users/signup" class="stylish_yello_link" > signup</a>
-    <form action="index" method="POST">
+    <a href="/users/signup" class="stylish_yello_link"> signup</a>
+
+    <form action="/users/login" method="POST">
         <h1>Log In</h1>
         <fieldset>
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="user_name">
-
-            <label for="mail">Email:</label>
-            <input type="email" id="mail" name="user_email">
+            <label for="name">UserName:</label>
+            <input type="text" id="name" name="username">
 
             <label for="password">Password:</label>
-            <input type="password" id="password" name="user_password">
+            <input type="password" id="password" name="password">
 
-            <label>Role:</label>
-            <input type="radio" id="buyer" value="buyer" name="user_role" checked>
-            <label for="under_13" class="light"> Buyer </label>
-
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <input type="radio" id="dealer" value="dealer" name="user_role">
-            <label for="over_13" class="light"> Dealer </label>
         </fieldset>
 
         <button type="submit">Log In</button>
     </form>
 </form>
+
+
+<% } else {  %>
+
+<script>
+    window.location = "/";
+</script>
+
+<% }  %>
