--- a/views/user_pages/user_login.ejs
+++ b/views/user_pages/user_login.ejs
@@ -133,10 +133,10 @@
         <h1>Log In</h1>
         <fieldset>
             <label for="name">UserName:</label>
-            <input type="text" id="name" name="username">
+            <input type="text" id="name" name="username" value = "prashant">
 
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password">
+            <input type="password" id="password" name="password" value = "000000">
 
         </fieldset>
 
