--- a/views/article_pages/add_article.ejs
+++ b/views/article_pages/add_article.ejs
@@ -9,7 +9,7 @@
 		<br>
 		<input type="text" id="article_title" name="article_title" class="form-control mb-4" placeholder="Title">
 
-		<input type="text" id="article_author_name" name="article_author_name" class="form-control mb-4" placeholder="Author Name">
+		<!-- <input type="text" id="article_author_name" name="article_author_name" class="form-control mb-4" placeholder="Author Name"> -->
 
 		<div class="form-group">
 			<textarea class="form-control rounded-2" id="article_body" name="article_body" rows="12" placeholder="Article Content"></textarea>
