--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-md bg-dark fixed-top navbar-dark">
 
     <a href=""></a> <!-- JUST KEEP ITS for adjustment -->
-    <a class="navbar-brand " href="#" style="position: fixed;  height: 80px; width: 60px;">
+    <a class="navbar-brand " href="/" style="position: fixed;  height: 80px; width: 60px;">
         <img src="/images/bitcoin_logo.png" alt="Logo" style="width:90px; margin-top: 0px; border: 0px solid red; position: fixed">
     </a>
 
@@ -17,7 +17,7 @@
     </button>
 
     <!-- Links -->
-    <div class="collapse navbar-collapse" id="navbarSupportedContent" style="">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent" >
 
         <% if ( user !== null ) {  %>
         <!-- ie if user is logged in  -->
